src/test/deca/codegen/invalid/overflow_sub_Ob.deca
// Description:
//    overflow par sub
//
// Resultats:
//  0
//
// Historique:
//    cree le 23/01/2017

class A{
  float sub(float x,float y){
    return x-y;
  }
}
{
A test = new A();
print(test.sub(-299999999999999999999999999999999999999.0,299999999999999999999999999999999999999.0));
}
